--- a/project-9-web-app/app/index.html
+++ b/project-9-web-app/app/index.html
@@ -1,39 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TMWP9WA - Home</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header class="header">
-        <nav class="nav-container">
-            <div class="logo">
-                <h1>TMWP9WA</h1>
-                <p class="slogan">A-H-C-G-D-Y-D!</p>
-            </div>
-            <div class="nav-buttons">
-                <a href="plans.html" class="nav-btn">Browse Plans</a>
-                <a href="order.html" class="nav-btn">Order Now</a>
-                <a href="contact.html" class="nav-btn">Contact Us</a>
-            </div>
-        </nav>
-    </header>
-
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <!-- Hero Section -->
     <main class="hero-section">
-        <div class="hero-content">
-            <h2>Welcome to TMWP9WA</h2>
-            <p>Your trusted meal planning service</p>
-            <div class="hero-buttons">
-                <a href="plans.html" class="hero-btn primary">Get Started</a>
-                <a href="contact.html" class="hero-btn secondary">Learn More</a>
-            </div>
+      <div class="hero-content">
+        <h2>Welcome to TMWP9WA</h2>
+        <p>Your trusted meal planning service</p>
+        <div class="hero-buttons">
+          <a href="plans.html" class="hero-btn primary">Get Started</a>
+          <a href="order.html" class="hero-btn secondary">Order</a>
+          <a href="contact.html" class="hero-btn primary">Learn More</a>
         </div>
+      </div>
     </main>
 
+    <!-- Footer Section -->
     <footer class="footer">
-        <p>&copy; 2024 TMWP9WA. All rights reserved.</p>
+      <p>&copy; 2024 TMWP9WA. All rights reserved.</p>
     </footer>
-</body>
+
+    <script src="script.js"></script>
+  </body>
 </html>
