--- a/project-9-web-app/app/order.html
+++ b/project-9-web-app/app/order.html
@@ -1,64 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TMWP9WA - Order</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header class="header">
-        <nav class="nav-container">
-            <div class="logo">
-                <a href="index.html"><h1>TMWP9WA</h1></a>
-                <p class="slogan">A-H-C-G-D-Y-D!</p>
-            </div>
-            <div class="nav-buttons">
-                <a href="plans.html" class="nav-btn">Browse Plans</a>
-                <a href="order.html" class="nav-btn active">Order Now</a>
-                <a href="contact.html" class="nav-btn">Contact Us</a>
-            </div>
-        </nav>
-    </header>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <section class="order-section">
+      <h2 class="section-title">Order Form</h2>
+      <form id="orderForm" class="order-form">
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" id="name" class="form-input" required />
+        </div>
+        <div class="form-group">
+          <label for="phone">Phone Number:</label>
+          <input type="tel" id="phone" class="form-input" required />
+        </div>
+        <div class="form-group">
+          <label for="address">Delivery Address:</label>
+          <input type="text" id="address" class="form-input" required />
+        </div>
+        <div class="form-group">
+          <label for="selectedPlan">Selected Plan:</label>
+          <input type="text" id="selectedPlan" class="form-input" readonly />
+        </div>
+        <div class="form-group">
+          <label for="dietaryPreference">Dietary Preference:</label>
+          <select id="dietaryPreference" class="form-input">
+            <option value="Vegan">Vegan</option>
+            <option value="Non-Vegan">Non-Vegan</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="addOns">Add-ons:</label>
+          <input
+            type="text"
+            id="addOns"
+            class="form-input"
+            placeholder="Extra proteins, snacks..."
+          />
+        </div>
+        <button type="submit" class="submit-btn">Submit Order</button>
+      </form>
+    </section>
 
-    <section class="section">
-        <h2 class="section-title">Order Form</h2>
-        <form id="orderForm" class="form-container">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" required>
-            </div>
-            <div class="form-group">
-                <label for="phone">Phone Number:</label>
-                <input type="tel" id="phone" required>
-            </div>
-            <div class="form-group">
-                <label for="address">Delivery Address:</label>
-                <input type="text" id="address" required>
-            </div>
-            <div class="form-group">
-                <label for="selectedPlan">Selected Plan:</label>
-                <input type="text" id="selectedPlan" readonly>
-            </div>
-            <div class="form-group">
-                <label for="dietaryPreference">Dietary Preference:</label>
-                <select id="dietaryPreference">
-                    <option value="Vegan">Vegan</option>
-                    <option value="Non-Vegan">Non-Vegan</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="addOns">Add-ons:</label>
-                <input type="text" id="addOns" placeholder="Extra proteins, snacks...">
-            </div>
-            <button type="submit" class="submit-btn">Submit Order</button>
-        </form>
+    <!-- Order Confirmation Message -->
+    <section id="confirmationSection" class="confirmation hidden">
+      <h2>Order Confirmation</h2>
+      <p>
+        Thank you, <span id="customerName"></span>! Your order for the
+        <span id="planName"></span> plan has been successfully placed.
+      </p>
+      <p>Order Details:</p>
+      <ul>
+        <li><strong>Plan:</strong> <span id="orderPlan"></span></li>
+        <li>
+          <strong>Dietary Preference:</strong> <span id="orderDietary"></span>
+        </li>
+        <li>
+          <strong>Delivery Address:</strong> <span id="orderAddress"></span>
+        </li>
+        <li><strong>Add-ons:</strong> <span id="orderAddOns"></span></li>
+      </ul>
+      <p>
+        A confirmation message has been sent to your phone via WhatsApp/SMS.
+      </p>
     </section>
 
     <footer class="footer">
-        <p>&copy; 2024 TMWP9WA. All rights reserved.</p>
+      <p>&copy; 2024 TMWP9WA. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
