--- a/project-9-web-app/app/plans.html
+++ b/project-9-web-app/app/plans.html
@@ -13,7 +13,7 @@
         <div class="plan-card">
           <div class="plan-header">
             <h3>Basic (Solo)</h3>
-            <p class="price">$30</p>
+            <p class="price">₵30</p>
           </div>
           <div class="plan-features">
             <p>✓ 3 meals/day</p>
@@ -27,7 +27,7 @@
           <div class="plan-header">
             <span class="badge">Popular</span>
             <h3>Balanced (2 People)</h3>
-            <p class="price">$50</p>
+            <p class="price">₵50</p>
           </div>
           <div class="plan-features">
             <p>✓ 3 meals/day</p>
@@ -41,7 +41,7 @@
         <div class="plan-card">
           <div class="plan-header">
             <h3>Family Plan (4 People)</h3>
-            <p class="price">$70</p>
+            <p class="price">₵70</p>
           </div>
           <div class="plan-features">
             <p>✓ 3 meals/day</p>
