--- a/project-9-web-app/app/plans.html
+++ b/project-9-web-app/app/plans.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TMWP9WA - Plans</title>
+    <link rel="stylesheet" href="plan.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -13,7 +14,7 @@
         <div class="plan-card">
           <div class="plan-header">
             <h3>Basic (Solo)</h3>
-            <p class="price">$30</p>
+            <p class="price">₵30</p>
           </div>
           <div class="plan-features">
             <p>✓ 3 meals/day</p>
@@ -27,7 +28,7 @@
           <div class="plan-header">
             <span class="badge">Popular</span>
             <h3>Balanced (2 People)</h3>
-            <p class="price">$50</p>
+            <p class="price">₵50</p>
           </div>
           <div class="plan-features">
             <p>✓ 3 meals/day</p>
@@ -41,7 +42,7 @@
         <div class="plan-card">
           <div class="plan-header">
             <h3>Family Plan (4 People)</h3>
-            <p class="price">$70</p>
+            <p class="price">₵70</p>
           </div>
           <div class="plan-features">
             <p>✓ 3 meals/day</p>
@@ -55,9 +56,9 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <p>&copy; 2024 TMWP9WA. All rights reserved.</p>
-    </footer>
+    </footer> -->
     <script src="script.js"></script>
   </body>
 </html>
