--- a/project-9-web-app/app/contact.html
+++ b/project-9-web-app/app/contact.html
@@ -5,22 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TMWP9WA - Contact</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="contact.css" />
   </head>
   <body>
-    <header class="header">
-      <nav class="nav-container">
-        <div class="logo">
-          <a href="index.html"><h1>TMWP9WA</h1></a>
-          <p class="slogan">A-H-C-G-D-Y-D!</p>
-        </div>
-        <div class="nav-buttons">
-          <a href="plans.html" class="nav-btn">Browse Plans</a>
-          <a href="order.html" class="nav-btn">Order Now</a>
-          <a href="contact.html" class="nav-btn active">Contact Us</a>
-        </div>
-      </nav>
-    </header>
-
     <section class="section">
       <h2 class="section-title">Contact Us</h2>
       <div class="contact-container">
@@ -43,10 +30,6 @@
         </form>
       </div>
     </section>
-
-    <footer class="footer">
-      <p>&copy; 2024 TMWP9WA. All rights reserved.</p>
-    </footer>
 
     <script src="script.js"></script>
   </body>
