--- a/project-9-web-app/app/contact.html
+++ b/project-9-web-app/app/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TMWP9WA - Contact</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="./styles/contact.css" />
   </head>
   <body>
     <section class="section">
