--- a/project-9-web-app/app/order.html
+++ b/project-9-web-app/app/order.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TMWP9WA - Order</title>
-    <link rel="stylesheet" href="order.css" />
+    <link rel="stylesheet" href="./styles/order.css" />
   </head>
   <body>
     <section class="order-section">
