--- a/project-9-web-app/app/payment.html
+++ b/project-9-web-app/app/payment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TMWP9WA - plan</title>
-    <link rel="stylesheet" href="./styles/payment.css" />
+    <link rel="stylesheet" href="payment.css" />
   </head>
   <body>
     <div class="payment-container">
