--- a/project-9-web-app/app/navbar.html
+++ b/project-9-web-app/app/navbar.html
@@ -25,10 +25,17 @@
         </ul>
       </div>
     </nav>
+    <button id="hamburger" class="md:hidden">
+      <!-- Hamburger Icon -->
+    </button>
+    <nav id="mobileMenu" class="hidden md:block">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+    </nav>
 
     <!-- Page Content -->
-    <div class="content">
-      <h1>Welcome to the Page</h1>
-    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
