remove id and class

--- a/project-9-web-app/app/order.html
+++ b/project-9-web-app/app/order.html
@@ -52,7 +52,7 @@
     </section>
 
     <section id="confirmationSection" class="confirmation hidden">
-      <div id="confirmationSection" class="hidden">
+      <div>
         <h3>Order Confirmation</h3>
         <p>Thank you for your order, <span id="customerName"></span>!</p>
         <p>Your plan: <span id="orderPlan"></span></p>
