--- a/project-9-web-app/app/plans.html
+++ b/project-9-web-app/app/plans.html
@@ -55,9 +55,9 @@
       </div>
     </section>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <p>&copy; 2024 TMWP9WA. All rights reserved.</p>
-    </footer> -->
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
